# lang

./: .gitignore  Cargo.toml  Makefile  README.md
asm/nasm/: p0.asm
bison/base/: Makefile  l.yy  simple.cc
bison/bracket/: Makefile  n.c  n.l  n.y  parse.c  parse.h  parse.output  scan.c  test.txt
bison/calc/: Makefile  driver.cc  driver.hh  parser.cpp  parser.hpp  parser.yy  scanner.cpp  scanner.ll
c/interstingcode/: log.org
c/sthash/: Makefile  hash.c  st.c  st.h
c14/: 0_bind.cpp  0_lambda.cpp  10_temppack.cpp  11_assign.cpp  12_sort.cpp  13_conv.cpp  14_o.cpp  1_thread.cpp  3_var.cpp  4_var.cpp  8_enable.cpp  9_temppack.cpp  Makefile  l4.h  l4.y
c17/: .cling.cpp
c17/alloc/: Makefile  alloc.h  dllist.cpp  dllist.h  range.h  res.cpp  res.h  res_mblock.h  res_pool.h  res_slab.h  stackplace.h  strprintf.cpp  strprintf.h  test.cpp  ulist.h
c17/hash/: Makefile  Makefile.b.mk  expose.h  hash.h  hash1.h  hash2.h  l1.cpp  l2.cpp  l3.cpp  test.cpp  test1.cpp  test2.cpp  tripple.h
c17/parse/: Makefile  lang_l.lex  lang_y.y  (+7 more)
chisel/: chisel-example.scala  chisel-example.v
cpp/: .gitignore  0_bind.cpp  0_lambda.cpp  100_del.cpp  100_struct.cpp  101_stack.cpp  102_stack.cpp  103_optarg.cpp  104_maps.cpp  105_launder.cpp  105_static_templ.cpp  106_serialize.cpp  106_serialize_2.cpp  107_const_hash.cpp  108_del.cpp  108_variant.cpp  14_o.cpp  15_cmp.cpp  1_thread_2.cpp  201_if.cpp  202_if.cpp  20_conv.cpp  2_switch.cpp  301_static.cpp  302_decompose.cpp  303_decompose.cpp  304_if.cpp  306_hash.cpp  30_const.cpp  401_tagged_union.cpp  50_map.cpp  51_bind.cpp  52_bind.cpp  5_var_data.cpp  601_catch.cpp  602.cpp  60_double_it.cpp  60_move.cpp  61_tripple.cpp  62_temp.cpp  (+28 more)
doc/: Makefile
dsp/: Makefile  test.ipynb
elisp/: alist.el  bind.el  catch.el  class.el  e.el  for.el  log.org  m.el  match.el  match.txt  pcase.el  plist.el  quote.el  re.el  re1.el  thread.el  thread1.el  thread2.el  vec0.el
emscripten/: Makefile  c.cpp  c.js  vite.config.js
go/: Makefile  log.org  p0.go
haskell/: .gitignore  1_newtyp.hs  2_print.hs  Makefile  NanoParsec.hs  log.org  stack.yaml  test.cabal  test1.hs  test2.hs
haskell/constructive/: Const.hs  constructive.cabal
haskell/eval/: Interpreter.hs  LCInterpreter.hs  M.hs  eval.cabal  log.org
haskell/lang/: .gitignore  0_sort.hs  1_newtyp.hs  Main.hs  Makefile  NanoParsec.hs  test.cabal
haskell/misc/: app.hs  test.cabal  test0.hs  test3.hs
haskell/monad/: .gitignore  Fa.hs  Ha.hs  M.cabal  M.hs  Makefile  Sim.hs  Simval.hs  hie.yaml  m.cabal  m.hs  monad.cabal  tsoding.hs  tsoding1.hs  tsoding2.hs  tsoding3.hs  tsoding4.hs
js/: Makefile  b.js  c.js  c.json  log.org  package.json  rail.org
l8/: log.org
lua/: table.lua
ocaml/: .gitignore  .merlin  Makefile  ast.ml  common.ml  control0.ml  control1.ml  data.txt  item.ml  lex.ml  lex.mll  log.org  main.ml  parser.ml  session.ml  stmt.ml  token.ml  tokenizer.mll
perl/: Makefile  dotie.pm  l.pl  lang.txt  lexer.pl  lexer.txt  log.org  opt.pl  templ.pl  templ.pm  templ_objs.pm  tie.pl  tok.pm  unit.pl
perl6/: log.org  p1.pl  parse.pl
picolisp/: log.org  picoLisp-2.0.tgz
python/: 0_gen.py  Makefile  log.org  obj.py
raku/: Makefile  Mod.rakumod  a0.p6  assoc0.p6  attr.raku  attr0.p6  c0.p6  d0.pl  d1.pl  e0.p6  inherit0.p6  iter0.p6  l.pl  l0.pl  list0.p6  log.org  lookup.raku  m.pl  module.raku  p1.pl  parse.pl  parse_option.p6  postfix_add.p6  prec.p6  prec0.p6  ra.pl  tok.pl
ruby/: log.org  m.rb  m1.rb
rust/: Makefile  log.org  p1.rs
rust/interesting/pattern_ai/text-analyzer/: Cargo.toml
scheme/: log.org
sh/: args.sh  b0.sh  b1.sh  b2.sh  b3.sh  b4.sh  b5.sh  b6.sh  d.txt  expr.sh  j.json  j0.sh  j1.json  j1.sh  re.sh  re0.sh  runmonitor.sh  runmonitortest.sh  scan.sh  scope0.sh  scope1.sh  scope1_load.sh  space.sh  test.sh
travis/: travis.yml
vala/: Makefile  e.vala  log.org  v.c
zsh/: Makefile  _cmd0  _cmd1  _cmd2  completion_init.sh  log.org
(+510 files in other folders)
