name:                test
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Konrad Eisele
maintainer:          eiselekd@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test
  build-depends:
    base             >= 4.6 ,
    filepath         >= 1.3 ,
    text             >= 1.1 ,
    pretty           >= 1.1 ,
    process          >= 1.1 ,
    directory        >= 1.2 ,
    haskeline        >= 0.7 ,
    containers       >= 0.5 ,
    parsec           >= 3.1 ,
    xilinx-lava      ,
    transformers     >= 0.4 
  default-language:  Haskell2010
  main-is:           Main.hs
