name:                test
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Konrad Eisele
maintainer:          eiselekd@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test
  build-depends:
    base             >= 4.6 ,
    filepath         >= 1.3 ,
    text             >= 1.1 
  default-language:  Haskell2010
  main-is:           Main.hs
