name:                M
version:             0.0.0.1
license:             MIT
license-file:        LICENSE
author:              Konrad Eisele
maintainer:          eiselekd@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test
  build-depends:
    base             >= 4.6 ,
    process          >= 1.1 
  default-language:  Haskell2010
  main-is:           M.hs
  