cabal-version: 1.12

name:           monad
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/learn#readme>
homepage:       https://github.com/githubuser/learn#readme
bug-reports:    https://github.com/githubuser/learn/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

executable monad-exe
  main-is: M.hs
  other-modules:
      Ha, Sim, Simsym, Simval
  hs-source-dirs:
      .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

